# media-organizer

./: pyproject.toml
media_organizer/: cli.py  file.py  image.py  video.py
tests/media_dest/0000-00-00/: IMG_6060.HEIC
tests/media_dest/2019-04-04/: IMG_2167.MOV
tests/media_dest/2022-01-05/: IMG_8083.HEIC
tests/media_dest/2022-06-11/: IMG_7141__.MOV
